# DataPlotter

./: .clang-format  .gitignore  CMakeLists.txt  DataPlotter.pro  DataPlotter.pro.qtds  DataPlotter.pro.user.457d804  DataPlotter.pro.user.737b4eb  DataPlotter.pro.user.d6bfaf5  DataPlotter.pro.user.f70f99f  DataPlotter.pro.user.fad8e3b  DefaultQmlTerminal.qml  ExampleQmlTerminal.qml  Návod.docx  README.md  averager.cpp  averager.h  axistag.cpp  axistag.h  buffer.cpp  buffer.h  channel.cpp  channel.h  clickablelabel.cpp  clickablelabel.h  cobs.cpp  colorCodes.h  colorCodes256.h  defaultpathmanager.cpp  defaultpathmanager.h  developeroptions.cpp  developeroptions.h  developeroptions.ui  enums.h  enumsDefinesConstants.h  enums_defines_constants.h  filesender.cpp  freqtimeplotdialog.cpp  freqtimeplotdialog.h  freqtimeplotdialog.ui  global.h  (+101 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: buil-windows-legacy.yml  build-linux.yml  build-windows-legacy.yml  build-windows.yml  build.yml  build_windows.yml  codacy.yml  deploy-github-releases.yml  deploy-obs.yml  pull-request-test-build.yml  push-test-run.yml  release-workflow.yml  upload-to-microsoft-store.yml
cmake/: PackageTools.cmake  TranslationUtils.cmake
communication/: cobs.cpp  cobs.h  filesender.h  newserialparser.cpp  newserialparser.h  plotdata.cpp  plotdata.h  serialreader.cpp  serialreader.h  serialsettingsdialog.cpp  serialsettingsdialog.h  telnetserver.cpp  telnetserver.h
customwidgets/: clickablelabel.cpp  mycursorslider.h  mydial.cpp  mydoublespinboxwithunits.cpp  mydoublespinboxwithunits.h  myelidedcombobox.cpp  myelidedcombobox.h  myframewithresizesignal.cpp  myframewithresizesignal.h  mypow2spinbox.cpp  mypow2spinbox.h  myscaledoublespinbox.cpp  myscaledoublespinbox.h  myterminal.cpp  myterminal.h
dataplotter/: DataPlotter.pro  interpolator.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_export.cpp  mainwindow_gui_preset.cpp  mycursorslider.h  mymodifiedqcptracer.h  myscaledoublespinbox.h  myterminal.cpp  plotdata.cpp  plotdata.h  plotmath.cpp  signalprocessing.h
dataplotter/fir/: hamm_x8.csv
dataplotter/translations/: translation_cz.qm  translation_en.ts
debian/: control
deploy_linux/: data-plotter.desktop  deploy.py  deploy_appimage.py  qt.conf
deploy_windows/: deploy-legacy.py  deploy.py  innosetup_script.iss  resources.rc.in
documentation/: Manual cz.docx  Manual_en.docx  Návod.docx  Prěhled protokolů_cz.docx  Prěhled protokolů_en.docx  ~$Návod.docx
extras/deploy_debian_native/: AppImageBuilder.yml  data-plotter.desktop  deploy.py
extras/deploy_macos/: data-plotter.icns
extras/deploy_windows/: AppxManifest.xml  create_msix.py  deploy.py  innosetup_script.iss  resources.rc.in
extras/packaging/: add-to-changelog.sh
fir/: kaiser_x16.csv  kaiser_x32.csv  kaiser_x8.csv
languages/: translation_cz.qm
linux_deploy/: control  data-plotter.desktop  data-plotter_3.3.0_amd64.deb  deploy.py  postinst  qt.conf
mainwindow/: appsettings.cpp  appsettings.h  mainwindow.cpp  mainwindow.h  mainwindow_autoset.cpp  mainwindow_cursors.cpp  mainwindow_cursors_xy.cpp  mainwindow_export.cpp  mainwindow_gui_preset.cpp  mainwindow_gui_slots.cpp  mainwindow_qml.cpp  mainwindow_save_load.cpp  mainwindow_send_file.cpp  mainwindow_timed_events.cpp  updatechecker.cpp  updatechecker.h  version.h
math/: averager.cpp  averager.h  expressionparser.cpp  expressionparser.h  interpolator.cpp  interpolator.h  plotmath.cpp  plotmath.h  signalprocessing.cpp  signalprocessing.h  simpleexpressionparser.cpp  simpleexpressionparser.h  variableexpressionparser.cpp  variableexpressionparser.h  xymode.cpp  xymode.h
plots/: myaxistickerwithunit.cpp  myaxistickerwithunit.h  myfftplot.cpp  myfftplot.h  mymainplot.cpp  mymainplot.h  mymodifiedqcptracer.h  mypeakplot.cpp  mypeakplot.h  myplot.cpp  myplot.h  myxyplot.cpp  myxyplot.h  qcustomplot.cpp
qml/: DefaultQmlTerminal.qml  DefaultQmlTerminalWindowsXPCompatible.qml  ExampleQmlTerminal.qml  ExampleQmlTerminalWindowsXPCompatible.qml  ansiterminalmodel.cpp  ansiterminalmodel.h  messagemodel.cpp  messagemodel.h  qmlterminalinterface.cpp  qmlterminalinterface.h
qml/DataPlotterComponents/: ANSITerminal.qml  MessageConsole.qml  SerialSender.qml  qmldir
settings/: default.cfg  default.txt  defaultSettings.txt
src/: defaultpathmanager.h  developeroptions.cpp  developeroptions.h  freqtimeplotdialog.cpp  freqtimeplotdialog.h  global.h  main.cpp  manualinputdialog.cpp  manualinputdialog.h  utils.cpp  utils.h  version.h.in
src/communication/: filesender.cpp  filesender.h  newserialparser.cpp  newserialparser.h  plotdata.cpp  plotdata.h  serialreader.cpp  serialreader.h  serialsettingsdialog.h  telnetserver.cpp
src/customwidgets/: checkbuttons.cpp  checkbuttons.h  clickablelabel.h  mycursorslider.cpp  mycursorslider.h  mydial.h  mydoublespinboxwithunits.cpp  mydoublespinboxwithunits.h  myelidedcombobox.cpp  myelidedcombobox.h  myframewithresizesignal.h  myscaledoublespinbox.cpp  myterminal.h
src/forms/: developeroptions.ui  freqtimeplotdialog.ui  mainwindow.ui  manualinputdialog.ui  serialsettingsdialog.ui
src/mainwindow/: appsettings.cpp  appsettings.h  mainwindow.cpp  mainwindow.h  mainwindow_autoset.cpp  mainwindow_cursors.cpp  mainwindow_gui_preset.cpp  mainwindow_gui_slots.cpp  mainwindow_qml.cpp  mainwindow_timed_events.cpp  updatechecker.cpp  updatechecker.h
src/math/: averager.h  expressionparser.cpp  expressionparser.h  signalprocessing.cpp  simpleexpressionparser.h  variableexpressionparser.cpp  variableexpressionparser.h  xymode.h
src/plots/: myaxistickerwithunit.cpp  myaxistickerwithunit.h  myfftplot.cpp  mymainplot.cpp  mymodifiedqcptracer.cpp  mypeakplot.cpp  mypeakplot.h  myplot.cpp  myxyplot.cpp  myxyplot.h  qcustomplot.h
src/qml/: ansiterminalmodel.cpp  ansiterminalmodel.h  messagemodel.h  qmlterminalinterface.h
stylesheets/: styleSheetLinux.txt  styleSheetWindows.txt  styleSheetWindows10.txt
translations/: dataplotter_cs.ts  dataplotter_en.ts  translation_cz.qm  translation_cz.ts  translation_en.qm  translation_en.ts
(+10 files in other folders)
